# ringbuffer

./: .gitignore  CMakeLists.txt  LICENCE  README.md  run_ringbuffer_tests.sh
src/: ringbuffer.c  ringbuffer.h
test/: main_test.cpp  test_sbuffer_ring.cpp
